# revng-c

./: global-to-local.mlir
include/revng-c/Pipes/: Kinds.h
include/revng-c/Support/: PTMLC.h
include/revng-c/Tools/clift-opt/: Model.h
include/revng-c/mlir/Pipes/: MLIRContainer.h
lib/ImportFromC/: HeaderToModel.cpp
lib/mlir/Dialect/Clift/IR/: CMakeLists.txt  CliftAttributes.cpp  CliftOps.cpp  CliftParser.cpp  CliftParser.h  CliftStorage.h  CliftTypes.cpp  ImportModel.cpp
lib/mlir/Dialect/Clift/Transforms/: CMakeLists.txt  GlobalToLocal.cpp  (+1 more)
lib/mlir/Pipes/: CMakeLists.txt  EmitCPipe.cpp  ImportCliftTypesPipe.cpp  ImportLLVMToMLIRPipe.cpp  MLIRContainer.cpp  MLIRLLVMHelpers.h
share/revng/pipelines/: revng-c-pipelines.yml
tests/unit/: CMakeLists.txt  CliftType.cpp
tests/unit/mlir_lit_tests/: ParseCliftTypes.mlir  lit.cfg.py
tests/unit/mlir_lit_tests/backend/: access.mlir  arithmetic.mlir  array.mlir  block.mlir  call.mlir  cast.mlir  do-while.mlir  for.mlir  global.mlir  goto.mlir  if.mlir  immediate.mlir  local.mlir  model.yml  operators.mlir  raw-function.mlir  switch.mlir  while.mlir
tests/unit/mlir_lit_tests/model-import/: ArrayType.yml  CABIFunctionType.yml  EnumType.yml  PrimitiveType.yml  RawFunctionType.yml  RecursiveStructType.yml  StructType.yml  TypedefType.yml  UnionType.yml
tests/unit/mlir_lit_tests/transforms/: global-to-local.mlir
tools/: CMakeLists.txt
tools/clift-emit/: CMakeLists.txt  Main.cpp
tools/clift-import-model/: CMakeLists.txt  Main.cpp
tools/clift-opt/: Main.cpp
tools/sandbox/: CMakeLists.txt  Main.cpp
(+20 files in other folders)
